syntax = "proto3";

package service_auth;

option go_package = "service_auth/pb";

message AuthLoginRequest {
    string username= 1;
    string password = 2;
}

message AuthLoginResponse {
    string token = 1;
}
